fix: z-indexes of core ui

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -198,6 +198,7 @@ a, img {
         padding: 0;
         left: @sidebar-width;  // changed dynamically via Resizer
         right: @main-toolbar-width;
+        z-index: @z-index-brackets-main-content;
     }
 
     .force-right-zero {
